--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,5 @@
 click==7.1.2
+dill==0.3.3
 Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -8,4 +9,7 @@ pkg-resources==0.0.0
 pyserial==3.5
 python-dotenv==0.15.0
 RPi.GPIO==0.7.0
+smbus==1.1.post2
+threaded==4.1.0
+tinydb==4.4.0
 Werkzeug==1.0.1
